Views are working, need to configure update_view.

--- a/learning_journal/learning_journal/templates/index.jinja2
+++ b/learning_journal/learning_journal/templates/index.jinja2
@@ -6,4 +6,4 @@
         <p>{{ entry.body }}</p>
         <a href="{{ request.route_url('detail_view', id=entry.id) }}"></a>
     {% endfor %}
-{% endlbock %}
+{% endblock %}
