--- a/learning_journal/learning_journal/templates/detail.jinja2
+++ b/learning_journal/learning_journal/templates/detail.jinja2
@@ -1,6 +1,6 @@
 {% extends 'layout.jinja2' %}
 {% block content %}
-    <a href="{{ request.route_url('update_view') }}"><button>Edit</button></a>
-    <h1>{{ entry.title }}</h1>
-    <p>{{ entry.body }}</p>
-{% endlbock %}
+    <a href="/"><button>Edit</button></a>
+    <h1>{{ entries.title }}</h1>
+    <p>{{ entries.body }}</p>
+{% endblock %}
