--- a/learning_journal/learning_journal/templates/layout.jinja2
+++ b/learning_journal/learning_journal/templates/layout.jinja2
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles/index.css">
     </head>
     <body>
-        <a href="{{ request.route_url('home') }}"><button>Home</button></a>
+        <a href="{{ request.route_url('list_view') }}"><button>Home</button></a>
     {% block content %}{% endblock %}
     </body>
 </html>
