--- a/learning_journal/learning_journal/templates/index.jinja2
+++ b/learning_journal/learning_journal/templates/index.jinja2
@@ -1,5 +1,6 @@
 {% extends 'layout.jinja2' %}
 {% block content %}
+<h1>List of Entries</h1>
     {% for entry in entries %}
         <h1>{{ entry.title }}</h1>
         <h6>{{ entry.creation_date }}</h6>
