--- a/learning_journal/learning_journal/templates/new_entry.jinja2
+++ b/learning_journal/learning_journal/templates/new_entry.jinja2
@@ -8,9 +8,9 @@
             <input type="text" name="title" value="{{ title }}" required/>
         </li>
         <li>
-            <label for="entry">Entry: </label>
-            <textarea name="entry">
-                {{ entry }}
+            <label for="body">Entry: </label>
+            <textarea name="body">
+                {{ body }}
             </textarea>
         </li>
         <li>
