revise edit.jinga2

--- a/learning_journal/learning_journal/templates/edit.jinja2
+++ b/learning_journal/learning_journal/templates/edit.jinja2
@@ -10,7 +10,7 @@
         <li>
             <label for="entry">Entry: </label>
             <textarea name="entry">
-                {{ entry }}
+                {{ body }}
             </textarea>
         </li>
         <li>
