--- a/learning_journal/learning_journal/templates/edit.jinja2
+++ b/learning_journal/learning_journal/templates/edit.jinja2
@@ -8,8 +8,8 @@
             <input type="text" name="title" value="{{ title }}" required/>
         </li>
         <li>
-            <label for="entry">Entry: </label>
-            <textarea name="entry">
+            <label for="body">Entry: </label>
+            <textarea name="body">
                 {{ body }}
             </textarea>
         </li>
